@@ -1,5 +1,9 @@
 2009-01-28  Lars Hartmann  <lars (at) chaotika (dot) org>
 
+	* lib/liblpxpak.c (lpxpak_indexblob_init): added.
+	(lpxpak_indexblob_destroy): added.
+	(lpxpak_indexblob_destroy): added.
+
 	* lib/liblpxpak.h (lpxpak_parse_fd): changed to use the newly
 	introduced lpxpak_blob_get_fd
 	(lpxpak_parse_data): changed to use lpxpak_blob_t structures as
@@ -12,6 +16,7 @@
 	lpxpak_blob_init().
 	(lpxpak_get_blob_fd): renamed to lpxpak_blob_get_fd().
 	(lpxpak_blob_get_path): added.
+	(lpxpak_blob_compile): added.
 
 2009-01-27  Lars Hartmann  <lars (at) chaotika (dot) org>
 
